@@ -7,15 +7,18 @@ import android.view.View
 import android.view.ViewGroup
 import androidx.fragment.app.Fragment
 import androidx.lifecycle.ViewModelProvider
+import androidx.navigation.fragment.findNavController
 import androidx.recyclerview.widget.LinearLayoutManager
 import cl.friendlypos.mypos.databinding.FragmentCartBinding
+import cl.friendlypos.mypos.ui.sales.SaleItem
+// import cl.friendlypos.mypos.ui.sales.SaleItemAdapter
 import cl.friendlypos.mypos.ui.sales.SalesCalculatorViewModel
 
 class CartFragment : Fragment() {
 
     private var _binding: FragmentCartBinding? = null
     private val binding get() = _binding!!
-    private lateinit var salesViewModel: SalesCalculatorViewModel
+    private lateinit var viewModel: SalesCalculatorViewModel
     private lateinit var adapter: SaleItemAdapter
 
     override fun onCreateView(
@@ -24,7 +27,12 @@ class CartFragment : Fragment() {
         savedInstanceState: Bundle?
     ): View {
         _binding = FragmentCartBinding.inflate(inflater, container, false)
-        salesViewModel = ViewModelProvider(requireActivity()).get(SalesCalculatorViewModel::class.java)
+
+        // Obtener instancia compartida del ViewModel (a nivel de actividad)
+        viewModel = ViewModelProvider(requireActivity()).get(SalesCalculatorViewModel::class.java)
+
+        // Asignar el viewModel al binding
+        binding.viewModel = viewModel
         binding.lifecycleOwner = viewLifecycleOwner
 
         setupRecyclerView()
@@ -36,18 +44,17 @@ class CartFragment : Fragment() {
 
     override fun onViewCreated(view: View, savedInstanceState: Bundle?) {
         super.onViewCreated(view, savedInstanceState)
-        setupSalesDataObserver()
+        setupObservers()
 
-        val initialItems = salesViewModel.saleItems.value
+        // Depuración
+        val initialItems = viewModel.saleItems.value
         Log.d("CartFragment", "Items iniciales: ${initialItems?.size ?: 0}")
-
-        adapter.submitList(salesViewModel.saleItems.value) // Carga inicial
     }
 
     private fun setupRecyclerView() {
         adapter = SaleItemAdapter(
             onItemDelete = { item ->
-                salesViewModel.removeSaleItem(item)
+                viewModel.removeSaleItem(item)
             }
         )
         binding.cartItemsRecyclerView.apply {
@@ -63,32 +70,31 @@ class CartFragment : Fragment() {
         }
     }
 
-    private fun setupSalesDataObserver()
-    {
-
-        salesViewModel.saleItems.observe(viewLifecycleOwner) { items ->
-
+    private fun setupObservers() {
+        viewModel.saleItems.observe(viewLifecycleOwner) { items ->
             Log.d("CartFragment", "Observer activado. Items recibidos: ${items.size}")
-            if (items.isEmpty()) {
-                Log.d("CartFragment", "Carrito vacío")
-                binding.emptyCartContainer.visibility = View.VISIBLE
-                binding.cartItemsRecyclerView.visibility = View.GONE
-            } else {
-                Log.d("CartFragment", "Carrito con items: ${items.size}")
-                binding.emptyCartContainer.visibility = View.GONE
-                binding.cartItemsRecyclerView.visibility = View.VISIBLE
-                adapter.submitList(items)
-            }
-
+            updateCartVisibility(items)
+            adapter.submitList(items)
         }
 
-        salesViewModel.totalAmount.observe(viewLifecycleOwner) { total ->
-            val amount = total.toIntOrNull() ?: 0
-            binding.subtotalAmount.text = "$$amount"
+        viewModel.totalAmount.observe(viewLifecycleOwner) { total ->
+            binding.subtotalAmount.text = "$${total}"
         }
 
-        salesViewModel.cartItemCount.observe(viewLifecycleOwner) { count ->
+        viewModel.cartItemCount.observe(viewLifecycleOwner) { count ->
             binding.itemCountBadge.text = count.toString()
+        }
+    }
+
+    private fun updateCartVisibility(items: List<SaleItem>) {
+        if (items.isEmpty()) {
+            Log.d("CartFragment", "Carrito vacío")
+            binding.emptyCartContainer.visibility = View.VISIBLE
+            binding.cartItemsRecyclerView.visibility = View.GONE
+        } else {
+            Log.d("CartFragment", "Carrito con items: ${items.size}")
+            binding.emptyCartContainer.visibility = View.GONE
+            binding.cartItemsRecyclerView.visibility = View.VISIBLE
         }
     }
 
@@ -98,7 +104,7 @@ class CartFragment : Fragment() {
         }
 
         binding.subtotalCard.setOnClickListener {
-            // Proceder al pago (implementar según necesites)
+            // Aquí iría la lógica para proceder al pago
         }
     }
 
